# tracing-profile

./: .gitignore  .gitmodules  CLAUDE.md  Cargo.toml  LICENSE.txt  README.md  build.rs
.github/workflows/: ci.yml
perfetto-sys/: Cargo.toml  README.md  build.rs  build_deb.sh
perfetto-sys/config/: system_profiling.cfg
perfetto-sys/cpp/: CMakeLists.txt  trace_categories.cc  trace_categories.h  wrapper.cc  wrapper.h
perfetto-sys/deb/perfetto/DEBIAN/: control  postinst  prerm
perfetto-sys/deb/perfetto/etc/systemd/system/: perfetto.service  traced.service  traced_probes.service
perfetto-sys/deb/perfetto/opt/perfetto/: ulvt_trace.cfg
perfetto-sys/examples/: interface.json
perfetto-sys/src/: counter.rs  error.rs  event.rs  guard.rs  lib.rs
scripts/: check_copyright_notice.sh
src/: env_utils.rs  errors.rs  filename_builder.rs  filename_utils.rs  lib.rs  macros.rs  utils.rs
src/data/: event_counts.rs  field_visitor.rs  guard_wrapper.rs  log_tree.rs  mod.rs  span_metadata.rs  storage_utils.rs
src/layers/: csv.rs  graph.rs  init_tracing.rs  ittapi.rs  mod.rs  perfetto.rs  perfetto_utils.rs  print_perf_counters.rs
tests/: integration_test.rs
