[package]
version = "0.6.0"
edition = "2021"
name = "tracing-profile"
description = "A span based profiler, utilizing the tracing crate"
keywords = ["metrics", "profiling", "tracing"]
license-file = "LICENSE.txt"
readme = "README.md"
repository = "https://gitlab.com/IrreducibleOSS/tracing-profile"

[dependencies]
ittapi = { version = "0.4.0", optional = true}
nix = { version = "0.29", features = ["time"] }
perf-event = { version = "0.4.8", optional = true }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
perfetto-sys = { path = "perfetto-sys", optional = true }

[dev-dependencies]
rayon = "1.10.0"

[features]
panic = []
perf_counters = ["perf-event"]
perfetto = ["dep:perfetto-sys"]
ittapi = ["dep:ittapi"]
