[package]
version = "0.8.0"
edition = "2021"
name = "tracing-profile"
description = "A span based profiler, utilizing the tracing crate"
keywords = ["metrics", "profiling", "tracing"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://gitlab.com/IrreducibleOSS/tracing-profile"

[dependencies]
ittapi = { version = "0.4.0", optional = true}
nix = { version = "0.29", features = ["time"] }
perf-event = { version = "0.4.8", optional = true }
perfetto-sys = { package = "tracing-profile-perfetto-sys", version = "0.7.0", path = "perfetto-sys", optional = true }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"

[dev-dependencies]
rayon = "1.10.0"
cfg-if = "1.0.0"

[features]
panic = []
perf_counters = ["perf-event"]
perfetto = ["dep:perfetto-sys"]
ittapi = ["dep:ittapi"]
