[package]
version = "0.10.1"
edition = "2021"
name = "tracing-profile"
authors = ["Irreducible Team <opensource@irreducible.com>"]
description = "A span based profiler, utilizing the tracing crate"
keywords = ["metrics", "profiling", "tracing"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://gitlab.com/IrreducibleOSS/tracing-profile"

[dependencies]
cfg-if = "1.0.0"
ittapi = { version = "0.4.0", optional = true}
linear-map = "1.2.0"
nix = { version = "0.29", features = ["time"] }
perf-event = { version = "0.4.8", optional = true }
perfetto-sys = { package = "tracing-profile-perfetto-sys", version = "0.9.0", path = "perfetto-sys", optional = true }
thiserror = "2.0.3"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter", "std"] }
tracing-tracy = { version = "0.11.3", optional = true }

[dev-dependencies]
rayon = "1.10.0"

[features]
ittapi = ["dep:ittapi"]
panic = []
perf_counters = ["perf-event"]
perfetto = ["dep:perfetto-sys"]
tracy = ["dep:tracing-tracy"]

