[package]
name = "tracing-profile-perfetto-sys"
version = "0.10.0"
edition = "2021"
authors = ["Irreducible Team <opensource@irreducible.com>"]
description = "Low-level bindings to Perfetto, optionally used by the tracing-profile crate"
keywords = ["profiling", "tracing", "perfetto"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/IrreducibleOSS/tracing-profile"
include = [
    "build.rs",
    "Cargo.toml",
    "README.md",
    "examples/*",
    "src/*",
    "config/system_profiling.cfg",
    "cpp/CMakeLists.txt",
    "cpp/trace_categories.h",
    "cpp/trace_categories.cc",
    "cpp/wrapper.h",
    "cpp/wrapper.cc",
    "cpp/perfetto/sdk/*",
    "cpp/perfetto/LICENSE",
    "cpp/perfetto/README.md",
]

[dependencies]
libc = "0.2.158"
tempfile = "3.12.0"
thiserror = "1.0.63"

[build-dependencies]
cc = "1.1.19"
